--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -279,7 +279,7 @@ input[type=button]{
 		margin-right: 60px;
 	}
 	&__item img:nth-child(1){
-		width: 483px ;
+		// width: 483px ;
 		height: 100% ;
 	}
 
@@ -292,7 +292,7 @@ input[type=button]{
 	}
 	&__item img:nth-child(2){
 		height: 210px;
-		width: 277px;
+		// width: 277px;
 	}
 	&__item:nth-child(3){
 		flex-direction: column;
@@ -300,7 +300,7 @@ input[type=button]{
 		margin-right: 60px;
 	}
 	&__item img:nth-last-child(3){
-		width: 554px;
+		// width: 554px;
 		height: 100%;
 	}
 	&__item:nth-child(4){
@@ -308,7 +308,8 @@ input[type=button]{
 		flex-basis:50%;
 	}
 	&__item img:nth-last-child(4){
-		width: 554px;
+		object-fit: contain;
+		// width: 100%;
 		height: 100%;
 	}
 	&__item:nth-child(5){
@@ -317,7 +318,7 @@ input[type=button]{
 		margin-right: 60px;
 	}
 	&__item img:nth-last-child(5){
-		width: 554px;
+		// width: 554px;
 		height: 100%;
 	}
 	&__item:nth-child(6){
@@ -325,7 +326,25 @@ input[type=button]{
 		flex-basis:50%;
 	}
 	&__item img:nth-last-child(6){
-		width: 554px;
+		// width: 100%;
 		height: 100%;
+	}
+}
+.footer{
+	 
+	&__wrapper{
+		background-color: #000000;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
+	&__wrapper p{
+		color: #F2F2F2;
+		padding-right: 550px;
+	}
+	&__wrapper img{
+		height: 90%;
 	}
 }
